# ShoppingAssistant

./: .env.example  .gitignore  .pytest.ini  AGENT_ANALYSIS.md  CLAUDE.md  MCP_IMPLEMENTATION_STATUS.md  MCP_REFACTORING_PROPOSAL.md  MY_EVAL_PROMPTS.md  README.md  REFACTORING_SESSION_COMPLETE.md  REFACTORING_STATUS.md  REFACTORING_SUMMARY.md  ROADMAP.md  SHOPPING_ASSISTANT_MCP.md  TEST_FIXES_COMPLETE.md  TEST_FIX_SUMMARY.md  claude_desktop_config.json  docker-compose.yml  download_models.py  main.py  pyproject.toml  pytest.ini  test_eval_fix.py  test_mcp_mock.py  test_mcp_server.py  test_mcp_simple.py  test_shopping_direct.py  test_shopping_mcp.py
app/: cli.py  cli_refactored.py  continuous_evaluation.py  eval_interpreter.py  fast_query_correction.py  hybrid_retrieval_orchestrator.py  improved_retrieval.py  llm_config.py  query_correction.py  ragas_config.py  ragas_gpt5_fix.py  search_improvements.py  testset_generator.py  vector_diagnostics.py  web_search_agent.py
app/agents/: __init__.py  init_databases.py  price_agent.py  schemas.py  stock_agent.py
app/commands/: chat.py  eval.py  ingest.py  web.py
app/data/: __init__.py  cache.py  embeddings.py  loader.py  processor.py
app/databases/: inventory.db  pricing.db
app/evaluation/: __init__.py  chat_eval.py  reporter.py  search_eval.py
app/mcp/: README.md  __init__.py  shopping_assistant_mcp_client.py  shopping_assistant_mcp_server.py  tavily_mcp_client.py  tavily_mcp_server.py
app/models/: __init__.py  cache.py  cross_encoder.py  sentence_transformer.py
app/search/: __init__.py  bm25.py  fusion.py  reranker.py  vector.py
app/utils/: __init__.py  io.py  text.py  time.py  uuid.py
docs/: CLI.md  CROSS_ENCODER_COMPARISON.md  EMBEDDING_MODEL_LESSONS.md  ENHANCED_EVALUATION_GUIDE.md  EVALUATION.md  EVALUATION_IMPROVEMENTS.md  EVALUATION_SAMPLE_SIZE_GUIDE.md  GPT5_CONFIGURATION.md  MODEL_SELECTION_GUIDE.md  RAG_EVALUATION_INSIGHTS.md  REFACTORING_GUIDE.md  RERANKING_MODELS.md  RETRIEVAL_IMPROVEMENTS.md  SEARCH_IMPROVEMENTS.md  SEARCH_RELEVANCE_LEARNINGS.md
eval/datasets/: README.md  chat_eval.jsonl  demo_100_20250810_084927.jsonl  demo_100_20250810_084927_metadata.json  eval_comparison_20_20250810_155442.jsonl  realistic_catalog_100_20250810_141003.jsonl  (+7 more)
notebooks/: ecommerce_analysis.py  ingest_embeddings.py  retrieval_fusion.py
tests/: README.md  __init__.py  test_cli_commands.py  test_cross_encoder.py  test_data_processing.py  test_llm_integration.py  test_mcp_mock.py  test_mcp_server.py  test_mcp_simple.py  test_reports.py  test_search_core.py  test_shopping_direct.py  test_shopping_mcp.py  test_vector_search.py  test_web_search.py
(+2 files in other folders)
