[project]
name = "shoppingassistant"
version = "0.1.0"
description = "Shopping Assistant is an advanced e-commerce search and recommendation system that combines data analysis, retrieval augmented generation (RAG), and machine learning capabilities. It processes product and review data to provide intelligent search, ranking, and business insights."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "dspy>=2.6.27",
    "fastapi>=0.116.1",
    "instructor>=1.10.0",
    "jinja2>=3.1.6",
    "marimo>=0.14.16",
    "mlflow>=3.2.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "polars>=1.32.2",
    "pydantic>=2.11.7",
    "plotly>=5.24.1",
    "qdrant-client>=1.15.1",
    "ragas>=0.3.0",
    "rank-bm25>=0.2.2",
    "redis>=6.4.0",
    "ruff>=0.12.8",
    "tavily-python>=0.7.10",
    "sentence-transformers>=3.0.1",
    "torch>=2.3.0",
    "transformers>=4.41.2",
    "ipython>=8.25.0",
    "typer>=0.12.5",
    "litellm>=1.75.2",
    "apscheduler>=3.11.0",
    "cryptography>=45.0.6",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
]
